@@ -14,7 +14,7 @@ import edu.colorado.phet.common.piccolophet.nodes.slider.VSliderNode;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
 
-import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.*;
+import static edu.colorado.phet.statesofmatter.StatesOfMatterStrings.STOVE_CONTROL_PANEL_ZERO_LABEL;
 
 /**
  * This class is the slider that is used to control the StoveNode, causing it
@@ -34,9 +34,9 @@ public class StoveControlSliderNode extends VSliderNode {
         super( -1, 1, value, new BooleanProperty( true ), 75 );
 
         // Show labels for add, zero, and remove.
-        addLabel( +1, new PhetPText( STOVE_CONTROL_PANEL_ADD_LABEL, LABEL_FONT ) );
+        addLabel( +1, new PhetPText( "Heat", LABEL_FONT ) );
         addLabel( 0.0, new PhetPText( STOVE_CONTROL_PANEL_ZERO_LABEL, LABEL_FONT ) );
-        addLabel( -1, new PhetPText( STOVE_CONTROL_PANEL_REMOVE_LABEL, LABEL_FONT ) );
+        addLabel( -1, new PhetPText( "Cool", LABEL_FONT ) );
 
         // Return to 0 when the user releases the slider.
         addInputEventListener( new PBasicInputEventHandler() {
