@@ -1,3 +1,4 @@
+> Modified the stove to be one large unit with a vertical slider on the front.
 # 1.08.08 (58303) Nov 2, 2011
 11/2/11 Deploying to dev for review by design team.
 > Added a key handler that allows the user to make use of the arrow keys to control the amount of heating or cooling.
